@@ -550,36 +550,247 @@ public class Server {
 
 ### （一）程序的三个阶段
 
+#### 1. 阶段图
+
 ![](img/编译、类加载、运行三阶段.png)
 
+​      `Class.forName("全类名")`							`类名.class`											`对象.getClass()`
 
 
-### （二）基础语法
+
+#### 2. Class类
+
+* `Class`也继承自`Object`；
+
+* `Class`类对象是由系统创建的，而不是`new`出来的。`new`和反射的方法创建对象，底层都会进行类加载：
+
+  ![](img/ClassLoader.loadClass().png)
+
+* 每个类都只会加载一次，在首次创建对象、调用类的静态方法/属性/代码块时；
+
+* 通过`Class`对象可以得到一个类的所有信息；
+
+* `Class`对象存放在堆，类的字节码二进制数据存放在方法区，又称为元数据。
+
+
+
+#### 3. 获取`Class`类对象
+
+##### （1）Class.forName("类的全类名")
+
+已知类的全类名，且该类在类路径下，可以使用`Class.forName()`。可能抛出异常。
+
+**适用于场景：**配置文件中，读取类的全路径
+
+##### （2）类名.class
+
+已知具体的类，通过类的`class`获取，该方式较为可靠。
+
+**适用场景：**参数传递
+
+##### （3）对象.getClass()
+
+获取到的是类的运行类型，因为每个对象都会有引用指向其`Class`类对象，而`Class`类对象在将字节码加载到内存时记录了它的真正类型。
+
+**适用场景：**有对象实例的情况。
+
+##### （4）类加载器
+
+在类加载阶段，会通过类加载器获取`Class`对象
+
+```java
+Cat cat = new Cat();
+ClassLoader classLoader = cat.getClass().getClassLoader();
+Class<?> cls = classLoader.loadClass(path);
+```
+
+##### （5）基本数据类型.class
+
+自动装箱成了其包装类。
+
+##### （6）基本数据类型的包装类.TYPE
+
+`int.class` 和 `Integer.TYPE`得到的Class 对象是同一个
+
+**适用场景：**基本数据类型的包装类
+
+
+
+#### 4. 哪些类型有Class对象
+
+* 外部类、成员内部类、静态内部类、局部内部类、匿名内部类
+* 接口
+* 数组
+* 枚举
+* 注解
+* 基本数据类型
+* `void`
+* `Class`本身
+
+```java
+Class<String> cls1 = String.class;  // 外部类
+Class<Serializable> cls2 = Serializable.class;  // 接口
+Class<Integer[][]> cls3 = Integer[][].class;    // 数组
+Class<Thread.State> cls4 = Thread.State.class;  // 枚举
+Class<Test> cls5 = Test.class;  // 注解
+Class<Integer> cls6 = int.class;    // 基本数据类型
+Class<Void> cls7 = void.class;  // void
+Class<Class> cls8 = Class.class;    // Class
+```
+
+
+
+#### 5. 类加载过程
+
+##### （1）静态加载与动态加载
+
+**静态加载：**
+
+编译时加载，如果找不到类则报错（即使在分支语句中运行不到，依旧会报错），依赖性较强。
+
+`new`、父类随子类加载、调用静态成员等是静态加载。
+
+**动态加载：**
+
+运行时加载，如果运行不到，就不会报错，依赖性降低。
+
+反射是动态加载。
+
+
+
+##### （2）类加载过程图
+
+![](img/类加载.png)
+
+![](img/类加载2.png)
+
+* 加载和连接阶段是由`JVM`完成的。
+* 注意和对象创建阶段区分开，类加载的初始化阶段只与静态成员有关。
+
+
+
+##### （3）各阶段细节：
+
+1. **加载：**将字节码从不同的数据源（`class`文件、`jar`包、网络）转化为二进制字节流加载到内存中（即，将数据加载到方法区），并生成一个代表该类的`Class`对象。
+
+2. **连接：**
+
+   1. **验证：**确保`Class`文件的字节流中的信息符合`JVM`规范，并且不会危害虚拟机自身安全。包括文件格式验证（是否以魔数`oxcafebabe`开头（字节码文件的开头是16进制的`cafebabe`八个字符））、元数据验证、字节码验证、符号引用验证等。
+
+      可以使用`-Xverify:none`来关闭大部分验证，从而缩短虚拟机类加载的时间。
+
+   2. **准备：**为静态变量分配内存，并初始化值。其中，`static`类型分配默认值，`static final`类型直接赋值。
+
+      ![](img/类加载-准备阶段.png)
+
+   3. **解析：**虚拟机将常量池的符号引用替换为直接引用。（逻辑地址转为物理地址）
+
+3. **初始化：**执行<clinit>()方法，依次收集类中的所有静态变量的赋值操作、和静态代码块汇总的语句，进行合并，然后再初始化。虚拟机会保证该方法在多线程环境中被正确地加锁、同步（在源码的`loadClass()`中有·`synchronized`关键字）。
+
+
+
+
+### （二）反射基础语法
 
 ```java
 // 通过全名获取类对象
-Class cls = Class.forName("com.cuc.rg.reflection.Cat");
+// <?>表示不确定的Java类型，也可以去掉
+Class<?> cls = Class.forName("com.cuc.rg.reflection.Cat");
+
+System.out.println(cls);    // class com.cuc.rg.reflection.Cat
+System.out.println(cls.getClass()); // class java.lang.Class
+
+
+System.out.println(cls.getName()）;	// 获取全类名
+System.out.println(cls.getSimpleName()）;	// 获取简单类名
+System.out.println(cls.getPackage());	// 获取包信息
 
 // 创建对象
 Object o = cls.newInstance();
 System.out.println("o的运行类型" + o.getClass());
 
-// 调用方法
-Method method = cls.getMethod("play");
-method.invoke(o);
-
 // 获取共有属性
 Field age = cls.getField("age");
 System.out.println(age.get(o));
 
+// 设置属性
+age.set(cat, 2);
+
+// 获取所有公有属性(包括父类)
+Field[] fields = cls.getFields();
+for (Field field : fields) {
+    System.out.println(field.getName() + "，" + field.get(cat));
+}
+// 获取所有属性，包括私有的
+Field[] declaredFields = cls.getDeclaredFields();
+                   
+//以int形式返回修饰符
+// 0 - 默认修饰符，1 - public，2 - private，4 - protected，8 - static，10 - final
+// 组合关系会直接相加，如 public static 是 9
+int num = field.getModifiers();	// 属性类型
+int num2 = method.getModifiers();	// 返回值类型
+                   
+System.out.println(field.getType());
+System.out.println(method.getReturnType());
+                   
+// 调用方法
+Method eat = cls.getMethod("play", String.class);
+method.invoke(eat, "毛线团");	// 如果有返回值，一律返回Object
+
+// 获取所有公有方法
+Method[] methods = cls.getMethods();
+                   
+// 获取所有方法，包括私有的
+Method[] declaredMethods = cls.getDeclaredMethods();
+                   
+// 获得形参数组信息
+Class<?>[] parameterTypes = declaredMethods.getParameterTypes();
+                   
 // 无参构造器
-Constructor constructor = cls.getConstructor();
-System.out.println(constructor);
+Constructor constructor1 = cls.getConstructor();
+System.out.println(constructor1);
 
 // 有参构造器
-Constructor constructor1 = cls.getConstructor(String.class);
-System.out.println(constructor1);
+Constructor constructor2 = cls.getConstructor(String.class);
+System.out.println(constructor2);
+
+// 获取本类所有构造器，不包含父类
+Constructor<?>[] declaredConstructors = cls.getDeclaredConstructor();
+                   
+// 构造器的参数信息
+Class<?>[] types = declaredConstructor.getParameterTypes();
+             
+// 获取父类信息
+Class<?> superClass = cls.getSuperClass();
+                   
+// 获取接口信息                 
+Class<?>[] interfaces = cls.getInterface();	
+                   
+// 获取注解信息                 
+Annotation[] annotations = cls.getAnnotations();	
 ```
+
+
+
+#### 6. 通过`Class`创建对象的方法
+
+```java
+Class<?> cls = Class.forName(path);
+
+// 1 直接创建，在Java9之后已经被弃用
+Object cat1 = cls.newInstance();
+
+// 2 公有构造器
+Constructor<?> constructor1 = cls.getConstructor(String.class);
+Object cat2 = constructor1.newInstance("猫猫");
+
+// 3 私有构造器
+Constructor<?> constructor2 = cls.getDeclaredConstructor(String.class, int.class);
+constructor2.setAccessible(true);   // 允许暴力访问私有构造器，私有属性和方法同理
+Object cat3 = constructor2.newInstance("猫猫猫", 3);
+```
+
+
 
 
 
@@ -644,4 +855,70 @@ m2()耗时：232毫秒
 ```
 
 
+
+### （四）例题
+
+#### 1. 例一
+
+使用反射创建`PrivateTest`对象，修改其私有属性`name`，并调用`getName`方法输出。
+
+```java
+public class Index {
+    public static void main(String[] args) throws Exception {
+
+        // 构造对象
+        Class<PrivateTest> cls = PrivateTest.class;
+        Constructor<?> constructor = cls.getConstructor();
+        PrivateTest test = (PrivateTest) constructor.newInstance();
+
+        // 获得私有属性，并修改
+        Field name = cls.getDeclaredField("name");
+        name.setAccessible(true);
+        name.set(test, "李四");
+
+        // 获得方法并输出
+        Method method = cls.getMethod("getName");
+        System.out.println(method.invoke(test));
+    }
+}
+
+class PrivateTest {
+    public PrivateTest() {
+    }
+
+    private String name = "张三";
+
+    public String getName() {
+        return name;
+    }
+
+```
+
+
+
+#### 2. 例二
+
+使用反射打印`File`的所有构造器，使用`newInstance()`获取`File`对象，并在`e`盘创建文件。
+
+```java
+public class Index {
+    public static void main(String[] args) throws Exception {
+        // 打印构造器
+        Class<?> cls = Class.forName("java.io.File");
+        Constructor<?>[] declaredConstructors = cls.getDeclaredConstructors();
+        for (Constructor constructor : declaredConstructors) {
+            System.out.println(constructor);
+        }
+
+        // 创建对象
+        Constructor<?> constructor = cls.getDeclaredConstructor(String.class);
+        Object file = constructor.newInstance("e:/背景/test.txt");
+        
+        // 调用方法创建文件
+        Method createNewFile = cls.getDeclaredMethod("createNewFile");
+        createNewFile.invoke(file);
+
+    }
+}
+```
 
